# relay

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
relay/: app.py  cli.py
relay/llm/: __init__.py  anthropic.py  base.py  constants.py  factory.py  google.py  openai.py  registry.py  schemas.py
relay/llm/native/: __init__.py
relay/llm/native/rest/: anthropic.py  google.py  openai.py
relay/llm/native/sdk/: anthropic.py  google.py  openai.py
relay/utils/: file.py
tests/llm/: test_base.py  test_factory.py  test_registry.py  test_schemas.py
tests/llm/native/rest/: test_anthropic.py  test_google.py  test_openai.py
tests/llm/native/sdk/: test_anthropic.py  test_google.py  test_openai.py
tests/utils/: test_file.py
