[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relay"
version = "0.1.0"
description = "A minimal, typed Python unified interface for native LLM SDKs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.86.0",
    "click>=8.0.0",
    "google-genai>=1.68.0",
    "openai>=2.29.0",
    "pydantic>=2.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
relay = "relay.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["relay"]
